04_Teste/exercicios_gerados/question_mdp_37_nova_linha/version_1/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 5
    l = 20 + 33 +
                ^
SyntaxError: invalid syntax